Download chart functionality implemented

--- a/index.html
+++ b/index.html
@@ -286,6 +286,9 @@
             </div>
             <div class="tab-pane fade" id="chart" role="tabpanel" aria-labelledby="chart-tab">
                 <canvas id="barChart" width="400" height="200"></canvas>
+                <!-- a plain Bootstrap button with the label "Download" -->
+                <div class="text-center mt-3">
+                    <button class="btn btn-primary" id="downloadChartBtn">Download Chart</button>
             </div>
         </div>
     </div>
