Add username input field with validation

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         <p>Your gateway to financial transformation</p>
     </header> -->
     <div class="container mt-5 text-start">
+        <!-- add textbox with id username -->
+        <input type="text" class="form-control" id="username" placeholder="Enter your username">
+        
         <h2>Welcome to Bucks2Bar</h2>
         <p>This project aims to help you manage your finances effectively.</p>
     </div>
